@@ -1,6 +1,7 @@
 <?php
 $corePath = $modx->getOption('core_path', null, MODX_CORE_PATH).'components/yandexmaps/';
 $assetsUrl = $modx->getOption('assets_url', null, MODX_CORE_PATH).'components/yandexmaps/';
+
 switch ($modx->event->name) {
 	case 'OnTVInputRenderList':
 		$modx->event->output($corePath.'tv/input/');
@@ -17,7 +18,9 @@ switch ($modx->event->name) {
 	case 'OnManagerPageBeforeRender':
 		break;
 	case 'OnDocFormRender':
-		$modx->regClientCSS($assetsUrl.'css/mgr/default.css');
+        $ymaps_url = $modx->getOption('yandexmaps_admin_ymaps_url', null, '//api-maps.yandex.ru/2.1/?lang=ru_RU&onload=ymOnLoad&load=Map,Placemark,GeoObjectCollection,map.addon.balloon,geoObject.addon.balloon,package.controls,templateLayoutFactory,overlay.html.Placemark,SuggestView');
+
+        $modx->regClientCSS($assetsUrl.'css/mgr/default.css');
 		
 		$jqueryScript = '<script type="text/javascript">';
 		$jqueryScript .= "\n";
@@ -31,14 +34,13 @@ switch ($modx->event->name) {
 		$jqueryScript .= "\n";
 		
 		$modx->regClientStartupScript($jqueryScript, true);
-		
-		
+
+
 		$ymapsScript = '<script type="text/javascript">';
 		$ymapsScript .= "\n";
-		$ymapsScript .= 'if(typeof ymaps == "undefined"){';
+		$ymapsScript .= 'if(typeof ymaps === "undefined"){';
 		$ymapsScript .= "\n";
-		/*$ymapsScript .= 'document.write(\'<script type="text/javascript" src="//api-maps.yandex.ru/2.1/?lang=ru_RU&load=Map,package.controls,SuggestView" ></\'+\'script>\');';*/
-		$ymapsScript .= 'document.write(\'<script type="text/javascript" src="//api-maps.yandex.ru/2.1/?lang=ru_RU&onload=onLoad&load=Map,Placemark,GeoObjectCollection,map.addon.balloon,geoObject.addon.balloon,package.controls,templateLayoutFactory,overlay.html.Placemark,SuggestView" ></\'+\'script>\');';
+		$ymapsScript .= 'document.write(\'<script type="text/javascript" src="' . $ymaps_url . '" ></\'+\'script>\');';
 		$ymapsScript .= "\n";
 		$ymapsScript .= '}';
 		$ymapsScript .= "\n";
