@@ -1,5 +1,6 @@
 1.1.3-beta (05.06.2019)
 ==============
+- Добавлена настройка yandexmaps_admin_ymaps_url со ссылкой на библиотеку карт
 - Поправлена разметка и стили
 
 1.1.2-beta (04.11.2015)
